Mon May 17 18:14:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Renamed LatencyTT to Latency and put all AMI4CCM together

        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.cpp:
          Print number left

        * connectors/dds4ccm/performance-tests/Latency:
        * connectors/dds4ccm/performance-tests/LatencyTT:
          Renamed LatencyTT to Latency

Mon May 17 16:21:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tools/Completion/CompletionHandler_T.h:
        * DAnCE/tools/Completion/Completion_Counter_Base.h:
        * DAnCE/tools/Completion/Completion_Counter_Base.inl:
        * DAnCE/tools/Split_Plan/Locality_Splitter.cpp:
        * DAnCE/tools/Split_Plan/Node_Splitter.cpp:
        * DAnCE/tools/Split_Plan/Sub_UUID_Generator.cpp:
          Removed not needed semi colon which gives compile errors
          with FC8

Mon May 17 14:36:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/repository_manager_admin_exec.cpp:
        * DAnCE/tools/Convert_Plan/Convert_Plan.cpp:
        * DAnCE/tools/Convert_Plan/Convert_Plan_Impl.h:
        * DAnCE/tools/Convert_Plan/Convert_Plan_Impl.cpp:
          Unicode fixes

Mon May 17 14:12:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSAT:
          Started with new test that creates its own connector

Mon May 17 13:04:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
          Added more test constructs

        * tests/IDL_Test/IDL3_Plus/README:
          Removed old comments, we now do a full compilation and code generation

Mon May 17 13:33:53 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.cpp
        Removed unused variable.
